# ImageEncoderQT

./: CMakeLists.txt  Main.qml  cimage.cpp  cimage.h  main.cpp  movingText.frag  movingText.vert
